// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preloader component with fit prop 1`] = `
<Bem
  block="preloader"
  mods={
    Object {
      "fit": "viewport",
    }
  }
>
  <spin2
    mix={
      Object {
        "block": "preloader",
        "elem": "spin",
      }
    }
    progress={true}
    size="m"
    tone="default"
    view="default"
  />
</Bem>
`;

exports[`preloader component with invalid fit prop 1`] = `
"Warning: Failed prop type: Invalid prop \`fit\` of value \`window\` supplied to \`Preloader\`, expected one of [\\"viewport\\"].
    in Preloader"
`;

exports[`preloader component without props 1`] = `
<Bem
  block="preloader"
  mods={
    Object {
      "fit": undefined,
    }
  }
>
  <spin2
    mix={
      Object {
        "block": "preloader",
        "elem": "spin",
      }
    }
    progress={true}
    size="m"
    tone="default"
    view="default"
  />
</Bem>
`;
